# mono-glenans

./: .gitignore  README.md  config.py  dashboard.py  dockerfile  pyproject.toml  requirements.txt
data/: config.py
document-stage/: plan-peda-semaine.csv  plan-peda-semaine.ods  tache-semaine.csv  tache-semaine.md  tache-semaine.ods
stage/: Footer.md  README.md  sidebar.py  stage.py  view.py
tests/tests_stage/: test_view.py
