[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.hatchling.dynamic]
dependencies = {file = ["requirements.txt"]}
[tool.setuptools]
py-modules = ['data', 'stage']
[project]
name = "mono-glenans"
version = "0.0.1"
requires-python = ">=3.10"
authors = [
  {name = "Tonow"},
]
maintainers = [
  {name = "Tonow"}
]
description = "Help for Glenans teatchers"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["glenans", "sailing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://mono-glenans.streamlit.app"
Documentation = "https://readthedocs.org"
Repository = "https://gitlab.com/mono-glenans/"
